--- a/src/Panel/Temperatura.form
+++ b/src/Panel/Temperatura.form
@@ -86,14 +86,11 @@
                               <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                               <Component id="jPanel2" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="-2" pref="137" max="-2" attributes="0"/>
-                                  <Component id="jLabelSeleccioneSalida" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                              <Group type="102" alignment="1" attributes="0">
-                                  <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
-                                  <Component id="jLabelSeleccioneEntrada" min="-2" max="-2" attributes="0"/>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="129" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="jLabelSeleccioneSalida" alignment="1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="jLabelSeleccioneEntrada" alignment="1" min="-2" max="-2" attributes="0"/>
                               </Group>
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
@@ -275,6 +272,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Farenheit"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnInFarenheitActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="btnInKelvin">
               <Properties>
