TP3-EJ2 TERMINADO (CREO...)

--- a/src/Panel/Temperatura.form
+++ b/src/Panel/Temperatura.form
@@ -247,6 +247,9 @@
                   </Border>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnConvertirActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JRadioButton" name="btnInCelsius">
               <Properties>
